feat: initial FastAPI project setup with Docker - Set up professional project structure (routers, models, schemas, services) - Configure FastAPI with Pydantic Settings for type-safe config management - Add Docker Compose with PostgreSQL and API containers - Implement health check endpoints - Add CORS middleware for frontend integration - Create Dockerfile with multi-stage build and non-root user - Set up development environment with hot reload - Add comprehensive README with badges and roadmap
Tech stack: FastAPI, PostgreSQL, SQLAlchemy, Docker, Pydantic

--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,9 @@ wheels/
 .installed.cfg
 *.egg
 
-# Environment - NEVER COMMIT SECRETS!
+# Environment
 .env
 .env.local
-.env.*.local
 
 # IDE
 .vscode/
